--- a/template.html
+++ b/template.html
@@ -84,6 +84,11 @@
                             aliquip.</p>
                         <p class="comment_user">Gilliam Underwood</p>
                     </article>
+                    <form class="Comment_form">
+                        <input type="text" name="user">
+                        <input type="text" name="comment">
+                        <button>Comment</button>
+                    </form>
                 </div>
             </article>
 
