--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Homework Task 04</title>
+    <title>Homework Task #5</title>
     <link rel="stylesheet" href="src/style.css">
 </head>
 
 <body>
 
 <header>
-    <h2>Homework Task #04</h2>
+    <h2>Homework Task #5</h2>
 </header>
 
 <main>
